--- a/simplePendulum.html
+++ b/simplePendulum.html
@@ -12,12 +12,16 @@
 
     <link rel="stylesheet" href="assets/css/mdb.min.css">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
 
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> 
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 
     <style>
         .fancy {
@@ -35,7 +39,6 @@
 
 <body>
 
-    <script src="assets/js/mdb.min.js"></script>
 
     <div class="container">
         <div class="jumbotron text-center">
@@ -53,7 +56,7 @@
                     <div id='addbtn' class="btn  btn-primary">Add Pendulum</div>
                 </div>
                 <div class="col">
-                    <div class="btn btn-warning" id='removebtn' >Remove Pendulum</div>
+                    <div class="btn btn-warning" id='removebtn'>Remove Pendulum</div>
                 </div>
                 <div class="col">
                     <div class="btn  btn-danger" id='resetbtn'>Reset All</div>
@@ -64,24 +67,47 @@
     </div>
 
     <div class="container mt-5">
-    <div class="text-center">
-        <center>
-    <div class="row">
-        <div class="col"><input name="length" type="number" placeholder="Length "></div>
-        <div class="col"><input type="number" name="mass" placeholder="Bob Mass "></div>
-        <div class="col"><input type="number" name="radius" placeholder="Bob radius "></div>
-        <div class="col"><input type="number" name="originx" placeholder="Origin X"></div>
-        <div class="col"><input type="number" name="originy" placeholder="Origin Y"></div>
-    </div>
+        <div class="text-center">
+            <center>
+                <div class="row">
+                    <div class="col">
+                        <input name="length" type="number" placeholder="Length ">
+                    </div>
+                    <div class="col">
+                        <input type="number" name="mass" placeholder="Bob Mass ">
+                    </div>
+                    <div class="col">
+                        <input type="number" name="radius" placeholder="Bob radius ">
+                    </div>
+                    <div class="col">
+                        <input type="number" name="originx" placeholder="Origin X">
+                    </div>
+                    <div class="col">
+                        <input type="number" name="originy" placeholder="Origin Y">
+                    </div>
+                </div>
+
+
+                <div class="row">
+                    <div class="col">
+                        <form class="range-field">
+                            <input type="range" name="gravity" min="0" max="20" step="0.1" />
+                            <p>Gravity control</p>
+                        </form>
+                    </div>
+                </div>
+
+        </div>
         </center>
     </div>
-   </div>
+
+    </div>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js"></script>
+
+    <script src="assets/js/sketch.js"></script>
 
 </body>
-
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js"></script>
-
-<script src="assets/js/sketch.js"></script>
 
 </html>
