new pendulum radius bug fix

--- a/simplePendulum.html
+++ b/simplePendulum.html
@@ -74,7 +74,7 @@
                         <input name="length" type="number" placeholder="Length ">
                     </div>
                     <div class="col">
-                        <input type="number" name="mass" placeholder="Bob Mass ">
+                        <input type="number" max="1" step="0.01" name="mass" placeholder="Bob Mass ">
                     </div>
                     <div class="col">
                         <input type="number" name="radius" placeholder="Bob radius ">
@@ -84,16 +84,6 @@
                     </div>
                     <div class="col">
                         <input type="number" name="originy" placeholder="Origin Y">
-                    </div>
-                </div>
-
-
-                <div class="row">
-                    <div class="col">
-                        <form class="range-field">
-                            <input type="range" name="gravity" min="0" max="20" step="0.1" />
-                            <p>Gravity control</p>
-                        </form>
                     </div>
                 </div>
 
