added autoresize of canvas when bobs are dragged off from screen

--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
                         <input name="length" type="number" placeholder="Length ">
                     </div>
                     <div class="col">
-                        <input type="number" max="1" step="0.01" name="mass" placeholder="Bob Mass ">
+                        <input type="number" max="1" maxlength="1" step="0.01" name="mass" placeholder="Bob Mass ">
                     </div>
                     <div class="col">
                         <input type="number" name="radius" placeholder="Bob radius ">
